fixed smooth scroll, cartCount and horizontal scrolling

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 
   &-content {
     flex: 1;
